force-app/main/default/objects/Contact/fields/d4c_Entity__c.field-meta.xml
<CustomField>
    <fullName>d4c_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity</label>
    <referenceTo>d4c_Entity__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>