force-app/main/default/objects/Contact/fields/d4c_NPNSyncError__c.field-meta.xml
<CustomField>
    <fullName>d4c_NPNSyncError__c</fullName>
    <formula>IF(
AND(
TEXT(d4c_Entity__r.d4c_NPNStatus__c) = &quot;Active&quot;,
ISPICKVAL(d4c_Entity__r.d4c_Type__c, &apos;Agency&apos;)
),
&quot;NPN is for an Agency (Not an Agent)&quot;,

IF(
TEXT(d4c_Entity__r.d4c_NPNStatus__c) = &quot;Invalid NPN&quot;,
&quot;The NPN was rejected by NIPR&quot;,

IF(
OR(
TEXT(d4c_Entity__r.d4c_NPNStatus__c) = &quot;Active&quot;,
TEXT(d4c_Entity__r.d4c_NPNStatus__c) = &quot;Processing&quot;
),
&quot;&quot;,
d4c_Entity__r.d4c_NPNSyncError__c
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPN Sync Error</label>
    <type>Text</type>
</CustomField>