force-app/main/default/objects/Contact/fields/ht_Producer__c.field-meta.xml
<CustomField>
    <fullName>d4c_Producer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producer</label>
    <referenceTo>d4c_Producer__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>